sensors: Account for base unit rather than starting unit in SensorUnitModel

Otherwise we end up with incorrect multipliers if start isn't the base
unit, since scaleDownFactor will calculate how to go down from something
like "Mega" to prefix-less, resulting in tiny multipliers, instead of
always starting at 1 and calculating offsets from there.

BUG: 461143